# fragrance_sampling

./: Procfile  README.md  pyproject.toml
fragrance-sampling/: pyproject.toml
fragrance-sampling/fragrance_sampling/: fragrance_sampling.py  fragrance_sampling_data.csv
fragrance_sampling/: app.py  fragrance_sampling.py
tests/: test_fragrance_sampling.py
