[tool.poetry]
name = "fragrance-sampling"
version = "0.1.0"
description = ""
authors = ["schuenemann <til.schuenemann@mailbox.org>"]

[tool.poetry.dependencies]
python = "^3.10"
dash = "^2.5.1"
pandas = "^1.4.3"
plotly = "^5.9.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pyproject-flake8 = "^0.0.1-alpha.4"
mypy = "^0.961"

[tool.flake8]
max-line-length = 100
max-complexity = 15
statistics = "True"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = "True"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
